--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,111 @@ body {
   transform: translateX(-5%);
 }
 
+section {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.line {
+  color: white;
+  background-color: rgb(146, 13, 78);
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.card {
+  background-color: #17181E;
+  color: white;
+}
+.card .card-title {
+  position: relative !important;
+  border-bottom: 2px solid #888888;
+  padding: 0 0 4px 0;
+}
+.card ul {
+  list-style: none;
+}
+.card ul li {
+  margin-left: -1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.card .btn-primary {
+  background-color: rgb(146, 13, 78);
+  border: none;
+  outline: none;
+  width: 100%;
+}
+.card .btn-primary:focus, .card .btn-primary:hover {
+  background-color: #c03677;
+}
+
+.container {
+  gap: 0.5rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  max-width: none !important;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+.form input {
+  width: 2.5rem;
+  height: 2.5rem;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+}
+.form .circle {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #D9D9D9;
+  border-radius: 50%;
+  margin: 0.5rem 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+form input[type=submit] {
+  background-color: rgb(146, 13, 78);
+  padding: 0.5rem 0;
+  color: white;
+  width: 70%;
+}
+
+table {
+  color: white;
+  background-color: #17181E;
+  border-radius: 0.4rem;
+}
+table th {
+  padding: 1rem;
+  border-bottom: 2px solid #888888;
+}
+table th:first-child {
+  color: rgb(146, 13, 78);
+}
+table td {
+  padding: 1rem;
+}
+table td:first-child {
+  color: rgb(146, 13, 78);
+}
+
+.hide {
+  display: none !important;
+}
+
 /*# sourceMappingURL=style.css.map */
