--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,8 @@
 //variables #####################
 $main-color: rgb(5, 7, 25);
 $secondary-color: rgb(146, 13, 78);
+$grey :#888888;
+$dark-grey :#17181E;
 //###########################
 * {
   box-sizing: border-box;
@@ -16,33 +18,41 @@ body {
 .navbar {
   background-color: transparent !important;
   padding: .5rem 1rem;
+
   .navbar-nav {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 95%;
   }
-  *{
+
+  * {
     color: white;
-    &:hover , &:active , &:focus {
+
+    &:hover, &:active, &:focus {
       color: $secondary-color !important;
     }
   }
+
   .navbar-brand {
     width: 90px;
+
     img {
-      width: 100% ;
+      width: 100%;
     }
   }
+
   .nav-link {
     color: white;
 
-    &:hover, &:active , &:focus  {
+    &:hover, &:active, &:focus {
       color: $secondary-color !important;
     }
+
     &.disabled {
       opacity: 30%;
     }
+
     &.active {
       color: $secondary-color !important;
       position: relative;
@@ -59,4 +69,105 @@ body {
       }
     }
   }
+}
+
+section {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.line {
+  color: white;
+  background-color: $secondary-color;
+  width: 100%;
+  padding: .5rem;
+}
+.card {
+  background-color: $dark-grey;
+  color: white;
+  .card-title {
+    position: relative !important;
+    border-bottom: 2px solid $grey;
+    padding: 0 0 4px 0;
+  }
+  ul {
+    list-style: none;
+    li {
+      margin-left: -1rem;
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+  }
+  .btn-primary {
+    background-color: $secondary-color;
+    border: none;
+    outline: none;
+    width: 100%;
+    &:focus ,&:hover{
+      background-color: #c03677;
+    }
+  }
+}
+.container {
+  gap: .5rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  max-width: none !important;
+}
+.form  {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: .5rem;
+  input {
+    width: 2.5rem;
+    height: 2.5rem;
+    outline: none;
+    border: none;
+    padding: .5rem;
+  }
+  .circle {
+    width: .5rem;
+    height: .5rem;
+    background-color: #D9D9D9;
+    border-radius: 50%;
+    margin: .5rem 0;
+  }
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  input[type=submit]{
+    background-color: $secondary-color;
+    padding: .5rem 0;
+    color: white;
+    width: 70%;
+  }
+}
+table {
+  color: white;
+  background-color: $dark-grey;
+  border-radius: .4rem;
+  th {
+    padding: 1rem;
+    border-bottom: 2px solid $grey;
+    &:first-child {
+      color: $secondary-color;
+    }
+  }
+  td {
+    padding: 1rem;
+    &:first-child {
+      color: $secondary-color;
+    }
+  }
+}
+.hide {
+  display: none !important;
 }
